kubernetes/namespace.yaml
# kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calculation-app

---
